--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -750,7 +750,7 @@
     <string name="faq_4_title_commons">Dw i\'m yn hoffi lliwiau\'r teclyn. Ga\'i newid nhw?</string>
     <string name="faq_4_text_commons">Cei. Wrth i ti lusgo teclyn ar dy sgrin gartref mae sgrin addasu\'r teclyn yn ymddangos. Gweli sgwariau lliwiau yn y gornel gwaelod chwith. Gwasga fanno i ddewis lliw newydd. Gellir defnyddio\'r llithrydd i addasu\'r alffa hefyd.</string>
     <string name="faq_5_title_commons">Ydy\'n bosib adfer ffeiliau wedi\'u dileu?</string>
-    <string name="faq_5_text_commons">Nac ydy. Ond mae yn bosib galluogi a defnyddio Bin Sbwriel yn hytrach na dileu yng ngosodiadau\'r ap. Bydd hynny jyst yn symud y ffeiliau yn hytrach na\'u dileu.</string>
+    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, there is a Recycle Bin enabled by default, it will cause the files just be moved in the Bin instead of deleting them.</string>
     <string name="faq_6_title_commons">Mae eicon lansio\'r ap wedi diflannu. Beth alla\'i wneud?</string>
     <string name="faq_6_text_commons">Mae hyn am nad yw dy lansiwr yn cefnogi addasu eiconau yn iawn. Rho gynnig ar lansio\'r ap o Google Play neu ryw declyn, os ar gael.
         Ar ôl iddo lansio, gosoda eicon yr ap nôl i\'r lliw oren rhagosodedig #F57C00. Os nad yw hyn yn bosib neu\'n gweithio, bydd rhaid ailosod yr ap.</string>
