--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -594,7 +594,7 @@
     <string name="faq_4_title_commons">Saya tidak suka warna widget, bisakah saya mengubahnya?</string>
     <string name="faq_4_text_commons">Ya, setelah Anda menyeret widget di layar beranda, layar konfigurasi widget akan muncul. Anda akan melihat kotak warna di pojok bawah kiri, tinggal sentuh untuk memilih warna baru. Anda bisa menggunakan penggeser untuk mengatur transparansi juga.</string>
     <string name="faq_5_title_commons">Bisakah saya mengembalikan file yang terhapus?</string>
-    <string name="faq_5_text_commons">Jika benar-benar sudah terhapus, tidak bisa. Namun, Anda bisa menggunakan fitur Sampah di setelan aplikasi. Fitur tersebut hanya akan memindahkannya ke situ alih-alih menghapusnya permanen.</string>
+    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, there is a Recycle Bin enabled by default, it will cause the files just be moved in the Bin instead of deleting them.</string>
     <string name="faq_6_title_commons">The app launcher icon disappeared. What can I do?</string>
     <string name="faq_6_text_commons">It is caused by your launcher not supporting icon customization properly. Try launching the app via Google Play or some widget, if available.
         Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
