--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -627,7 +627,7 @@
     <string name="faq_4_title_commons">Мені не подобаються кольори віджета, чи можу я їх змінити?</string>
     <string name="faq_4_text_commons">Так, коли ви перетягуєте віджет на головний екран, з\'являється панель його налаштувань. Ви побачите кольорові квадрати в нижньому лівому куті, просто натисніть їх, щоб обрати новий колір. Ви також можете використати повзунок, щоб налаштувати ступінь прозорості.</string>
     <string name="faq_5_title_commons">Чи можу я якось відновити видалені файли?</string>
-    <string name="faq_5_text_commons">Якщо вони були дійсно видалені, ви не можете. Однак ви можете увімкнути використання Корзини замість видалення у налаштуваннях додатка. Тоді файли будуть переміщатися в неї, а не видалятись.</string>
+    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, there is a Recycle Bin enabled by default, it will cause the files just be moved in the Bin instead of deleting them.</string>
     <string name="faq_6_title_commons">Значок запуску додатка зник. Що робити?</string>
     <string name="faq_6_text_commons">Це спичинено тим, що ваша програма запуску не підтримує правильно налаштування значків. Спробуйте запустити додаток через Google Play або віджет, якщо доступний.
         Після запуску встановіть типовий оранжевий колір значка #F57C00. У найгіршому випадку вам доведеться перевстановити додаток.</string>
